--- a/src/main/webapp/appointment/appointmentsCalendar.xhtml
+++ b/src/main/webapp/appointment/appointmentsCalendar.xhtml
@@ -26,7 +26,7 @@
                                 </h2>
                                 <c:set var="day" value="1" />
                                 <c:forEach begin="1" end="5">
-                                    <b:row>
+                                    <b:row styleClass="calendarRow">
                                         <c:forEach begin="1" end="5">
                                             <c:if test="#{day le time.maxDaysInCurrentMonth}">
                                                 <b:column styleClass="calendarCell" span="2">
